--- a/src/component/About/About.css
+++ b/src/component/About/About.css
@@ -21,3 +21,37 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+/* Mobile */
+
+@media (max-width: 425px) {
+  .about-card {
+    margin: 0% 10%;
+    font-size: 13px;
+    text-align: justify;
+    padding: 20px 30px;
+    /* height: 70vh; */
+  }
+  .feature-div {
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0px;
+    column-gap: 10px;
+  }
+  .feature-div p {
+    font-size: 12px;
+    box-shadow: 5px 5px 10px rgba(163, 177, 198, 0.6),
+      3px 3px 3px rgba(163, 177, 198, 0.659),
+      -1px -1px 5px rgba(255, 255, 255, 0.742),
+      -5px -5px 10px rgba(255, 255, 255, 0.641);
+  }
+  .about-txt {
+    font-size: 20px;
+    margin: 0px;
+  }
+  .goal-txt {
+    margin: 0px;
+    font-size: 18px;
+  }
+}
