--- a/src/component/HeadNav/HeadNav.css
+++ b/src/component/HeadNav/HeadNav.css
@@ -34,3 +34,30 @@
 .right-head p:active {
   opacity: 0.7;
 }
+
+/* Mobile */
+
+@media (max-width: 425px) {
+  .heading {
+    padding: 20px;
+  }
+  .left-head,
+  .right-head {
+    column-gap: 15px;
+  }
+  .logo-img {
+    width: 40px;
+  }
+  .head-txt {
+    font-size: 20px;
+  }
+  .right-head p {
+    font-size: 12px;
+    padding: 10px 15px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 7px rgba(163, 177, 198, 0.484),
+      2px 2px 2px rgba(163, 177, 198, 0.659),
+      -1px -1px 3px rgba(255, 255, 255, 0.742),
+      -4px -4px 5px rgba(255, 255, 255, 0.368);
+  }
+}
